--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 /* latin */
 @font-face {
     font-family: 'Monoton';
@@ -7,6 +8,7 @@
     src: local('Monoton'), local('Monoton-Regular'), url(../fonts/Monoton.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
 /* latin */
 @font-face {
     font-family: 'Offside';
@@ -15,101 +17,380 @@
     src: local('Offside'), local('Offside-Regular'), url(../fonts/Offside.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
 ::-webkit-scrollbar{
-  width: 0; 
+    width: 0; 
+    height: 0;
 }
-body{
+
+html,body{
     background-color: #f6f6f6;
     font-family: Offside,cursive;
     user-select: none;
     -webkit-user-select: none;
     -webkit-tap-highlight-color: transparent;
+    scroll-behavior:smooth;
 }
+
 *{
     margin: 0;
     padding: 0;
+    list-style: none;
 }
+
 header{
     width: 100%;
     height: 50px;
     overflow-x: scroll; 
     overflow-y: hidden; 
     background-color: white;
+    white-space: nowrap;
+    border-bottom: 2px cornflowerblue solid;
 }
-header>span{
-    float: right;
-    font-size: 24px;
-    width: auto;
-    padding: 0 20px;
-    text-align: center;
-    line-height: 50px;
-    font-weight: bold;
-}
-header>ul>a{
-    color: cornflowerblue;
-    text-decoration: none;
-}
-header>ul>li{
-    /* position: relative; */
+
+/* 
+header::before{
+    content: '';
+    width: 5px;
+    height: 50px;
+    position: absolute;
+    background-color: cornflowerblue;
+} */
+
+header span{
     list-style: none;
     width: auto;
     height: 50px;
-    float: left;
     font-size: 15px;
     font-weight: bold;
     line-height: 50px;
     text-align: center;
     cursor: pointer;
     padding: 0 20px;
+    overflow: hidden;
+    display: inline-block;
     transition: all .5s ease;
     -webkit-transition: all .5s ease;
 }
-header ul li:last-child{
+
+header span a{
+    color: black;
+    text-decoration: none;
+}
+
+header span:first-child{
     list-style: none;
-    float: right;
-    font-size: 24px;
+    font-size: 25px;
     width: auto;
     padding: 0 20px;
     text-align: center;
     line-height: 50px;
     font-weight: bold;
 }
-header>ul>li:hover{
+
+header span:first-child a{
+    color: cornflowerblue;
+}
+
+header>span:hover>a{
     color: pink;
 }
-header>ul>li:hover .detail{
+
+header span:hover .detail{
     height: 300px;
 }
-/* header>ul>li::before{
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0;
-    height: 50%;
-    opacity: .5;
-    transition: all .5s ease;
-    -webkit-transition: all .5s ease;
-    background-color: pink;
-}
-header>ul>li:hover:before{
-    width: 100%;
-} */
+
 .detail{
     position: absolute;
     left: 0;
-    top: 50px;
+    top: 52px;
     width: 100%;
     height: 0;
-    padding-left: 20px;
+    z-index: 10;
     overflow-y: scroll;
-    background-color: black;
+    background-color: lightseagreen;
     transition: all .5s ease;
     -webkit-transition: all .5s ease;
     box-sizing: border-box;
 }
+
 .detail ul li{
+    position: relative;
     list-style: none;
     text-align: left;
+    padding-left: 20px;
+}
+
+.detail ul li a{
     color: white;
+}
+
+.detail ul li::after{
+    content: '';
+    position: absolute;
+    height: 50px;
+    width: 0;
+    left: -20px;
+    top: 0;
+    background-color: black;
+    transition: all 1s ease;
+    -webkit-transition: all 1s ease;
+}
+
+.detail ul li:hover{
+    background-color: pink;
+}
+
+.detail ul li:hover a{
+    color: lightseagreen;
+}
+
+.background{
+    position: relative;
+    width: 100%;
+    height: 300px;
+    background-color: black;
+    /* overflow: hidden; */
+}
+
+@-webkit-keyframes circle {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  80% {
+    -webkit-transform: translateY(-100vh);
+    transform: translateY(-100vh);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(-100vh);
+    transform: translateY(-100vh);
+  }
+}
+
+@keyframes circle {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  80% {
+    -webkit-transform: translateY(-100vh);
+    transform: translateY(-100vh);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(-100vh);
+    transform: translateY(-100vh);
+  }
+}
+@-webkit-keyframes shadow {
+  0% {
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+  }
+  30% {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+  100% {
+    -webkit-transform: scaleY(0.5);
+    transform: scaleY(0.5);
+  }
+}
+@keyframes shadow {
+  0% {
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+  }
+  30% {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+  100% {
+    -webkit-transform: scaleY(0.5);
+    transform: scaleY(0.5);
+  }
+}
+.shape {
+    position: absolute;
+    width: 66px;
+    height: 66px;
+    -webkit-animation: circle 4s linear infinite;
+    animation: circle 4s linear infinite;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+}
+.shape::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    height: 360px;
+    -webkit-transform-origin: top center;
+    transform-origin: top center;
+    -webkit-animation: inherit;
+    animation: inherit;
+    -webkit-animation-name: shadow;
+    animation-name: shadow;
+}
+
+.circle {
+    bottom: 0;
+    left: 30%;
+    background: linear-gradient(45deg, #49E7C2 0%, #7AEC90 100%);
+    border-radius: 50%;
+}
+.circle::after {
+    background: linear-gradient(-180deg, rgba(73, 231, 194, 0.4) 0%, rgba(28, 28, 28, 0) 100%);
+}
+
+.rectangle {
+    bottom: 0;
+    left: 50%;
+    background: linear-gradient(45deg, #EA9F45 0%, #F4EE51 100%);
+    -webkit-animation-delay: 2s;
+    animation-delay: 2s;
+}
+.rectangle::after {
+    background: linear-gradient(-180deg, rgba(234, 159, 69, 0.3) 0%, rgba(28, 28, 28, 0) 100%);
+    top: 100%;
+}
+
+.triangle {
+    bottom: 0;
+    left: 70%;
+    background: linear-gradient(45deg, #22A0F9 0%, #71FDC8 100%);
+    -webkit-clip-path: polygon(0 0, 100% 100%, 100% 0);
+    clip-path: polygon(0 0, 100% 100%, 100% 0);
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+}
+.triangle::after {
+    background: linear-gradient(-180deg, rgba(34, 223, 249, 0.4) 0%, rgba(28, 28, 28, 0) 100%);
+    top: 100%;
+    will-change: transform;
+}
+
+.square-round-three{
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(45deg, #49E7C2 0%, #7AEC90 100%);
+    border-radius: 50% 0 50% 50%;
+}
+.square-round-three::after{
+    background: linear-gradient(-180deg, rgba(73, 231, 194, 0.4) 0%, rgba(28, 28, 28, 0) 100%);
+    will-change: transform;
+}
+.circle-spin-half {
+    width: 46px;
+    height: 46px;
+    bottom: 0;
+    left: 10%;
+    background: transparent;
+    border-color: linear-gradient(-180deg, rgba(73, 231, 194, 0.4) 0%, rgba(28, 28, 28, 0) 100%);
+    border-style: solid;
+    border-width: 20px;
+    border-radius: 50%;
+}
+.circle-spin-half::after{
+    width: 86px;
+    left: -20px;
+    background: linear-gradient(-180deg, rgba(73, 231, 194, 0.4) 0%, rgba(28, 28, 28, 0) 100%);
+    will-change: transform;
+}
+
+footer{
+    width: 100%;
+    min-height: 300px;
+    padding-top: 30px;
+    background-color: #2b2929;
+    font-family: Microsoft Yahei;
+}
+
+footer .list{
+    width: 30%;
+    float: left;
+    min-height: 200px;
+    padding-left: 40px;
+}
+
+footer .list li{
+    margin-bottom: 10px;
+}
+
+footer .list a{
+    color: #b7b7b7;
+    font-size: 14px;
+    letter-spacing: 1px;
+    text-decoration: none;
+}
+
+.list-bottom{
+    float: left;
+    width: 100%;
+    height: 20px;
+}
+
+.green a{
+    color: #00a546!important;
+}
+
+.drop{
+    position: absolute;
+    left: 20px;
+    /* top: 30px; */
+    transition: height 5s;
+    /* animation:drop 5s ease 0s 1 alternate forwards; */
+    animation-name: drop, whirl;
+    animation-duration: 5s, 1.5s;
+    animation-timing-function:ease, linear;
+    animation-iteration-count: 1, 3;
+    animation-fill-mode:forwards, none;
+    /* -webkit-animation:drop 5s ease-in-out 0s 1 alternate forwards; */
+}
+
+@keyframes drop{
+    from {
+        top: 0px;
+    }
+    to {
+        top:95%;
+    }
+}
+
+@-webkit-keyframes drop{
+    from {
+        top: 0px;
+    }
+    to {
+        top:95%;
+    }
+}
+
+@keyframes whirl{
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .background{
+        height: 150px;
+    }
 }
