--- a/static/css/home.css
+++ b/static/css/home.css
@@ -595,7 +595,7 @@ header span:hover .detail {
 
 .article {
     position: relative;
-    width: 450px;
+    width: calc(50% - 50px);
     height: 110px;
     border-radius: 3px;
     padding: 20px;
@@ -616,7 +616,7 @@ header span:hover .detail {
     left: -2px;
     width: 100%;
     height: 100%;
-    clip: rect(0px, 720px, 164px, 0px);
+    clip: rect(0px, 960px, 164px, 0px);
 }
 
 .article::before {
@@ -642,7 +642,7 @@ header span:hover .detail {
     left: -7px;
     border: 2px cornflowerblue solid;
     transition: all .5s;
-    clip: rect(0px, 720px, 2px, 720px);
+    clip: rect(0px, 960px, 2px, 960px);
 }
 
 .article:hover::after {
@@ -650,7 +650,7 @@ header span:hover .detail {
     left: -2px;
     width: 100%;
     height: 100%;
-    clip: rect(0px, 720px, 184px, 0px);
+    clip: rect(0px, 960px, 184px, 0px);
 }
 
 .article h3 {
@@ -723,13 +723,56 @@ header span:hover .detail {
     border-top: 1px solid #e0e0e0;
 }
 
-.php54-side-toolbar a:first-child:hover>.qr-box {
+.php54-side-toolbar a:nth-child(2):hover>.qr-box {
     display: flex;
-    opacity: 1;
+}
+
+.php54-side-toolbar a:first-child:hover>.search {
+    border: 1px solid #e0e0e0;
+    width: 200px;
+}
+
+.php54-side-toolbar a:first-child:hover>.search input {
+    padding-left: 10px;
+}
+
+::placeholder { 
+    color:cornflowerblue; 
+}
+
+::-webkit-input-placeholder  { 
+    color:cornflowerblue; 
 }
 
 .php54-side-toolbar i {
     font-size: 20px;
+}
+
+.php54-side-toolbar a:first-child i {
+    font-weight: 600;
+}
+
+.search {
+    height: 44px;
+    width: 0;
+    position: absolute;
+    margin-right: 50px;
+    right: 0;
+    top: 0;
+    background-color: #fff;
+    -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .1);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .1);
+    transition: width .5s;
+}
+
+.search input {
+    height: 100%;
+    width: calc(100% - 10px);
+    outline: none;
+    font-size: 18px;
+    font-weight: 300;
+    font-family: arial;
+    border: none;
 }
 
 .qr-box {
@@ -743,8 +786,6 @@ header span:hover .detail {
     background-color: #fff;
     -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .1);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .1);
-    opacity: 0;
-    transition: all 5s;
 }
 
 .qr-box img {
@@ -828,7 +869,7 @@ footer span {
     font-size: 16px!important;
 }
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 960px) {
     /* 轮播图原点 */
     .slider-pagination {
         display: none;
